; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_subdev.c_nouveau_subdev_fini.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_subdev.c_nouveau_subdev_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_subdev = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_subdev_fini(%struct.nouveau_subdev* %0, i32 %1) #0 {
  %3 = alloca %struct.nouveau_subdev*, align 8
  %4 = alloca i32, align 4
  store %struct.nouveau_subdev* %0, %struct.nouveau_subdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %6 = getelementptr inbounds %struct.nouveau_subdev, %struct.nouveau_subdev* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %23

9:                                                ; preds = %2
  %10 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %11 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %12 = getelementptr inbounds %struct.nouveau_subdev, %struct.nouveau_subdev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @nv_mask(%struct.nouveau_subdev* %10, i32 512, i32 %13, i32 0)
  %15 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %16 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %17 = getelementptr inbounds %struct.nouveau_subdev, %struct.nouveau_subdev* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %20 = getelementptr inbounds %struct.nouveau_subdev, %struct.nouveau_subdev* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @nv_mask(%struct.nouveau_subdev* %15, i32 512, i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %9, %2
  %24 = load %struct.nouveau_subdev*, %struct.nouveau_subdev** %3, align 8
  %25 = getelementptr inbounds %struct.nouveau_subdev, %struct.nouveau_subdev* %24, i32 0, i32 1
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @nouveau_object_fini(i32* %25, i32 %26)
  ret i32 %27
}

declare dso_local i32 @nv_mask(%struct.nouveau_subdev*, i32, i32, i32) #1

declare dso_local i32 @nouveau_object_fini(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
